--- a/srcd/templates/home.html
+++ b/srcd/templates/home.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {{ page_title }} -
+{% extends "base.html" %}
+
+{% block main %}
+<h1 class="text-lg font-medium">{{ page_title }}</h1> -
     {{ queryset_count}}
-</body>
-
-
-</html>
+{% endblock main %}
